Add lab 5 avs,fix shh and fix lab 5,6 to flp

--- a/Os/lab8/SSH/build.gradle
+++ b/Os/lab8/SSH/build.gradle
@@ -14,12 +14,9 @@ run {
 }
 repositories {
     mavenCentral()
-        jcenter()
-        maven { url 'https://maven.google.com' }
-        google()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation 'com.jcraft:jsch:0.1.55'
+    compile group: 'com.jcraft', name: 'jsch', version: '0.1.55'
 }
